--- a/QuanLyTiemBanh.csproj
+++ b/QuanLyTiemBanh.csproj
@@ -50,6 +50,13 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DTO\Account.cs" />
+    <Compile Include="DTO\Employee.cs" />
+    <Compile Include="GUI\frmAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmAccount.Designer.cs">
+      <DependentUpon>frmAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\frmEmp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +77,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\frmAccount.resx">
+      <DependentUpon>frmAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmEmp.resx">
       <DependentUpon>frmEmp.cs</DependentUpon>
     </EmbeddedResource>
