--- a/QuanLyTiemBanh.csproj
+++ b/QuanLyTiemBanh.csproj
@@ -47,11 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\BillDAO.cs" />
+    <Compile Include="DAO\BillInfoDAO.cs" />
     <Compile Include="DAO\CakeDAO.cs" />
     <Compile Include="DAO\CategoryDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DTO\Account.cs" />
+    <Compile Include="DTO\Bill.cs" />
+    <Compile Include="DTO\BillInfo.cs" />
     <Compile Include="DTO\Cake.cs" />
     <Compile Include="DTO\Category.cs" />
     <Compile Include="DTO\Employee.cs" />
@@ -60,6 +64,18 @@
     </Compile>
     <Compile Include="GUI\frmAccount.Designer.cs">
       <DependentUpon>frmAccount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\frmBill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmBill.Designer.cs">
+      <DependentUpon>frmBill.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\frmBillInfor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmBillInfor.Designer.cs">
+      <DependentUpon>frmBillInfor.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\frmCake.cs">
       <SubType>Form</SubType>
@@ -95,6 +111,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GUI\frmAccount.resx">
       <DependentUpon>frmAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmBill.resx">
+      <DependentUpon>frmBill.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmBillInfor.resx">
+      <DependentUpon>frmBillInfor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmCake.resx">
       <DependentUpon>frmCake.cs</DependentUpon>
